--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "tryer": "^1.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
